<resources>
    <string name="app_name">Yumly</string>
    <string name="signup_with_email">Signup with email</string>
    <string name="or_use_social_signup">or use social signup</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="already_have_account">Already have account</string>
    <string name="log_in"><u>Log In</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_message">Save tasty recipes &amp; enjoy personalized meal recommendations! 🍽️✨</string>
    <string name="login_message">Delicious bites, perfectly planned! 🥗🍕</string>
    <string name="your_name">Your Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="yumly">Yumly</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_recipes">Find Recipes</string>
    <string name="meal_of_the_day">Meal of the day</string>
    <string name="popular_recipes">Popular recipes</string>
    <string name="roasted_chicken">Roasted Chicken</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="plane">Plane</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="egypt">Egypt</string>
    <string name="result">Result</string>
    <string name="beef_burger">Beef Burger</string>
    <string name="recipe">RECIPE</string>
    <string name="sweet_potato_quinoa_patties">Sweet Potato Quinoa Patties</string>
    <string name="preheat_oven_to_350_f_spray_a_9x13_inch_baking_pan_with_non_stick_spray_combine_soy_sauce_cup_water_brown_sugar_ginger_and_garlic_in_a_small_saucepan_and_cover_bring_to_a_boil_over_medium_heat_remove_lid_and_cook_for_one_minute_once_boiling_meanwhile_stir_together_the_corn_starch_and_2_tablespoons_of_water_in_a_separate_dish_until_smooth_once_sauce_is_boiling_add_mixture_to_the_saucepan_and_stir_to_combine_cook_until_the_sauce_starts_to_thicken_then_remove_from_heat_place_the_chicken_breasts_in_the_prepared_pan_pour_one_cup_of_the_sauce_over_top_of_chicken_place_chicken_in_oven_and_bake_35_minutes_or_until_cooked_through_remove_from_oven_and_shred_chicken_in_the_dish_using_two_forks_meanwhile_steam_or_cook_the_vegetables_according_to_package_directions_add_the_cooked_vegetables_and_rice_to_the_casserole_dish_with_the_chicken_add_most_of_the_remaining_sauce_reserving_a_bit_to_drizzle_over_the_top_when_serving_gently_toss_everything_together_in_the_casserole_dish_until_combined_return_to_oven_and_cook_15_minutes_remove_from_oven_and_let_stand_5_minutes_before_serving_drizzle_each_serving_with_remaining_sauce_enjoy">Preheat oven to 350° F. Spray a 9x13-inch baking pan with non-stick spray. Combine soy sauce, ½ cup water, brown sugar, ginger and garlic in a small saucepan and cover. Bring to a boil over medium heat. Remove lid and cook for one minute once boiling. Meanwhile, stir together the corn starch and 2 tablespoons of water in a separate dish until smooth. Once sauce is boiling, add mixture to the saucepan and stir to combine. Cook until the sauce starts to thicken then remove from heat. Place the chicken breasts in the prepared pan. Pour one cup of the sauce over top of chicken. Place chicken in oven and bake 35 minutes or until cooked through. Remove from oven and shred chicken in the dish using two forks. *Meanwhile, steam or cook the vegetables according to package directions. Add the cooked vegetables and rice to the casserole dish with the chicken. Add most of the remaining sauce, reserving a bit to drizzle over the top when serving. Gently toss everything together in the casserole dish until combined. Return to oven and cook 15 minutes. Remove from oven and let stand 5 minutes before serving. Drizzle each serving with remaining sauce. Enjoy!</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="video">Video</string>
    <string name="youtube">Youtube</string>
    <string name="soy_sauce">soy sauce</string>
    <string name="_3_4_cup">3/4 cup</string>
    <string name="the_favorites">The Favorites</string>
    <string name="meat_casserole">Meat,Casserole</string>
    <string name="add_to_your_plane">Add to your plane</string>
    <string name="your_plans">Your Plans</string>
    <string name="_26_03_2025">26-03-2025</string>
    <string name="at_26_03_2025">At: 26-03-2025</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="about_yumly">
        Yumly makes meal planning easy and fun! Plan your weekly meals, save favorites, get daily random meal suggestions, and back up your data. Explore meals by area, ingredients, or category all in one app 🍽❤️
    </string>
    <string name="about_yumly_app">About Yumly</string>
    <string name="welcome_eslam">Welcome, </string>
    <string name="continue_without_login"><u>Continue Without Login!</u></string>
    <string name="you_should_login_first_to_continue">You should login first to continue!</string>
    <string name="your_wifi_is_turned_off_please_enable_it_for_a_better_experience">Your connection is lost</string>
    <string name="turn_on">Turn On</string>
    <string name="default_web_client_id">AIzaSyAXcAUHn0KzGF7a3nd90EfayQ9NGrQY9Qo</string>
</resources>