<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_signup"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".features.profile.ProfileFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginBottom="20dp"
        app:lottie_rawRes="@raw/loading2" />


    <TextView
        android:fontFamily="@font/atkinson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/about_yumly_app"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:fontFamily="@font/atkinson2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/about_yumly"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="20dp"
        app:dividerColor="@color/gray" />

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        >
        <TextView
            android:fontFamily="@font/atkinson"
            android:id="@+id/user_name"
            android:text="@string/welcome_eslam"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/helperColor"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/logout"
            android:textSize="12sp"
            app:cornerRadius="10dp" />
    </LinearLayout>

</LinearLayout>