<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_signup"
    tools:context=".ui.auth.SignupView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp"
        android:background="@drawable/gradient_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/signup" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView4"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_message"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_field_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterTextColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable = "@drawable/user"
            app:boxStrokeColor = "@color/helperColor"
            app:hintTextColor="@color/helperColor"
            app:boxStrokeWidth = "2dp"
            android:hint="@string/enter_your_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="45dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_field_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            app:endIconMode="clear_text"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable = "@drawable/mail"
            app:boxStrokeColor = "@color/helperColor"
            app:hintTextColor="@color/helperColor"
            app:boxStrokeWidth = "2dp"
            android:hint="@string/enter_your_e_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="45dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_field_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            app:endIconMode="password_toggle"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable = "@drawable/password"
            app:boxStrokeColor = "@color/helperColor"
            app:hintTextColor="@color/helperColor"
            app:boxStrokeWidth = "2dp"
            android:hint="@string/enter_your_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="45dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:elevation="8dp"
            android:stateListAnimator="@null"

            android:id="@+id/signup_with_email_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:text="@string/sign_up"
            app:backgroundTint="@color/helperColor"
            app:cornerRadius="10dp"
            android:textColor="@color/white"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>