<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_menu_view_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".features.auth.views.AuthMenuView">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="500dp"
        android:layout_height="300dp"
        app:cardCornerRadius="150dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/food_image" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="432dp"
        android:layout_height="506dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <com.google.android.material.button.MaterialButton
            android:elevation="8dp"
            android:stateListAnimator="@null"

            android:id="@+id/signup_btn_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/signup_with_email"
            app:backgroundTint="@color/black"
            app:cornerRadius="10dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <View
                android:layout_width="80dp"
                android:layout_height="3dp"
                android:background="@color/gray_light"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="12dp" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/gray_light"
                android:text="@string/or_use_social_signup" />
            <View
                android:layout_width="80dp"
                android:layout_height="3dp"
                android:background="@color/gray_light"
                android:layout_marginTop="5dp"
                android:layout_marginStart="12dp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton

            android:elevation="8dp"
            android:stateListAnimator="@null"

            android:id="@+id/signup_google_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/continue_with_google"
            app:backgroundTint="@color/white"
            app:cornerRadius="0dp"
            app:icon="@drawable/google_icon"
            app:iconTint="@null"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="5dp"
            app:iconSize="18dp"
            android:textColor="@color/black"/>


        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_with_facebook_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:elevation="8dp"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:stateListAnimator="@null"
            android:textSize="17sp"
            app:cornerRadius="8dp"
            app:iconSize="30dp"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/already_have_account" />

            <TextView
                android:id="@+id/text_button_log_in_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
