<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_view_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    tools:context=".features.auth.views.LoginView">



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_login"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="start"
            android:id="@+id/arrow_back_id"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_back" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/login" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:text="@string/login_message"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_text_field_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:paddingBottom="15dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/helperColor"
            app:boxStrokeWidth="2dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/helperColor"
            app:startIconDrawable="@drawable/mail">

            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="45dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_text_field_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingBottom="20dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/helperColor"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/helperColor"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="45dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_with_email_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:elevation="8dp"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/helperColor"
            app:cornerRadius="10dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>