<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/plane_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<TextView
    android:id="@+id/day_txt_id"
    android:textSize="20sp"
    android:textColor="@color/helperColor"
    android:text="@string/at_26_03_2025"
    android:textStyle="bold"
    android:layout_marginBottom="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/plan_item_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/search_color"
        android:padding="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/plan_image_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/food_image" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_plan_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/roasted_chicken"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc_plan_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/preheat_oven_to_350_f_spray_a_9x13_inch_baking_pan_with_non_stick_spray_combine_soy_sauce_cup_water_brown_sugar_ginger_and_garlic_in_a_small_saucepan_and_cover_bring_to_a_boil_over_medium_heat_remove_lid_and_cook_for_one_minute_once_boiling_meanwhile_stir_together_the_corn_starch_and_2_tablespoons_of_water_in_a_separate_dish_until_smooth_once_sauce_is_boiling_add_mixture_to_the_saucepan_and_stir_to_combine_cook_until_the_sauce_starts_to_thicken_then_remove_from_heat_place_the_chicken_breasts_in_the_prepared_pan_pour_one_cup_of_the_sauce_over_top_of_chicken_place_chicken_in_oven_and_bake_35_minutes_or_until_cooked_through_remove_from_oven_and_shred_chicken_in_the_dish_using_two_forks_meanwhile_steam_or_cook_the_vegetables_according_to_package_directions_add_the_cooked_vegetables_and_rice_to_the_casserole_dish_with_the_chicken_add_most_of_the_remaining_sauce_reserving_a_bit_to_drizzle_over_the_top_when_serving_gently_toss_everything_together_in_the_casserole_dish_until_combined_return_to_oven_and_cook_15_minutes_remove_from_oven_and_let_stand_5_minutes_before_serving_drizzle_each_serving_with_remaining_sauce_enjoy"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/country_plan_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/egypt"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/delete_btn_item_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="5dp"
            android:src="@drawable/delete"
            app:tint="@color/primaryColor" />
    </androidx.cardview.widget.CardView>
</LinearLayout>

